--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ngrx/component-store": "^10.0.0",
+    "@ngrx/data": "^10.0.0",
+    "@ngrx/effects": "^10.0.0",
+    "@ngrx/entity": "^10.0.0",
+    "@ngrx/router-store": "^10.0.0",
+    "@ngrx/schematics": "^10.0.0",
+    "@ngrx/store": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
